[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
path = "lib.rs"


[dependencies]
xid = "1"

[dependencies.thiserror]
version = "1"

[dependencies.redismod]
path = "../.."

[dependencies.log]
version = "0.4.0"
features = ["std"]

[dependencies.redis-module]
features = ["experimental-api"]
branch = "feature/native-types"
git = "https://github.com/bmartynov/redismodule-rs"